--- a/src/pages/second/second.html
+++ b/src/pages/second/second.html
@@ -15,7 +15,16 @@
 
 <ion-content padding>
 
-    Receiving data : {{name}}
+    <ion-card padding>
+        Receiving data for Nav Parms : {{data1}}
+    </ion-card>
+
+
+    <br> <br>
+
+
+
+
 
 
 </ion-content>
