send and get data by providers

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -23,4 +23,19 @@
         <button ion-button (click)="next2()"> Next Page  </button>
     </ion-card>
 
+
+    <br> <br>
+
+    <ion-card padding>
+        <ion-label>Set data to Provider </ion-label>
+        <input type="text" [(ngModel)]="data3"> {{data3}}
+        <button ion-button (click)="next3()"> Set  </button>
+
+        <br>
+        <ion-label> Get data from Provider {{data4}}</ion-label>
+        <button ion-button (click)="next4()"> Set  </button>
+    </ion-card>
+
+
+
 </ion-content>
