--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -38,4 +38,11 @@
 
 
 
+    <br> <br>
+
+    <ion-card padding>
+        <ion-label>publish and subscribe data by Events </ion-label>
+        <button ion-button (click)="next5()"> Set  </button>
+    </ion-card>
+
 </ion-content>
