add sort function

--- a/src/pages/arrays/arrays.html
+++ b/src/pages/arrays/arrays.html
@@ -8,6 +8,7 @@
             <button ion-button (click)="filterData()"> filter </button>
             <button ion-button (click)="map()"> map </button>
             <button ion-button (click)="reduce()"> reduce </button>
+            <button ion-button (click)="sortData()"> sort </button>
         </ion-buttons>
     </ion-navbar>
 </ion-header>
