Structural Directives: ngIf & ngFor & ngSwitch

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -9,16 +9,24 @@
 
 
 <ion-content padding>
-
-    <ion-item padding> Ionic : Passing Data Between Pages </ion-item>
-    <button ion-button (click)="pass()"> Next Page  </button>
+    <ion-card>
+        <ion-item padding> Ionic : Passing Data Between Pages </ion-item>
+        <button ion-button (click)="pass()"> Next Page  </button>
+    </ion-card>
     <br> <br>
 
 
-    <ion-item padding> Ionic : Arrays Operations </ion-item>
-    <button ion-button (click)="arrayss()"> Next Page  </button>
+    <ion-card>
+        <ion-item padding> Ionic : Arrays Operations </ion-item>
+        <button ion-button (click)="arrayss()"> Next Page  </button>
+    </ion-card>
     <br> <br>
 
 
+    <ion-card>
+        <ion-item padding> Ionic : Arrays Directives </ion-item>
+        <button ion-button (click)="directives()"> Next Page  </button>
+    </ion-card>
+    <br> <br>
 
 </ion-content>
